# Protoype

./: .gitignore  index.html  package.json  vite.config.js
docs/: DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  PLUGIN_TEMPLATE.md  PROJECT_STRUCTURE  Plugin-Compression.md
docs/plugin-template/: Cargo.toml  README.md
docs/plugin-template/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/plugins/: PluginList.tsx  hooks.ts  types.ts
rust/: README.md
rust/plugin-example/: Cargo.toml
rust/plugin-example/src/: lib.rs
rust/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
rust/src-tauri/plugins/: mod.rs  registry.rs
rust/src-tauri/plugins/sevenz/: Cargo.toml
rust/src-tauri/plugins/sevenz/src/: lib.rs
rust/src-tauri/plugins/zip/: Cargo.toml  plugin.toml
rust/src-tauri/plugins/zip/src/: lib.rs
rust/src-tauri/plugins/zstd/: Cargo.toml  plugin.toml
rust/src-tauri/plugins/zstd/src/: lib.rs
rust/src-tauri/src/: lib.rs  macros.rs  main.rs
rust/src-tauri/src/core/: logging.rs  mod.rs  plugin_loader.rs  plugin_manager.rs  types.rs
rust/src-tauri/src/plugin_api/: base.rs  compression.rs  lib.rs  mod.rs  types.rs
rust/src-tauri/src/plugin_api/platform/: linux.rs  macos.rs  mod.rs  windows.rs
rust/src-tauri/src/plugins/: loader.rs  mod.rs  registry.rs
rust/src-tauri/src/plugins/sevenz/: mod.rs
rust/src-tauri/src/plugins/template/: mod.rs
rust/src-tauri/src/plugins/zip/: mod.rs
rust/src-tauri/src/plugins/zstd/: mod.rs
rust/src-tauri/src/transfer/: mod.rs  receiver.rs  sender.rs
src/: main.js
